After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 755708 - matroskademux: assertion failed: (stream->alignment <= G_MEM_ALIGN)
matroskademux: assertion failed: (stream->alignment <= G_MEM_ALIGN)
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
1.6.0
Other Linux
: Normal critical
: 1.6.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-09-27 21:01 UTC by Sebastian Dröge (slomo)
Modified: 2015-10-02 08:05 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Sebastian Dröge (slomo) 2015-09-27 21:01:17 UTC
See https://ci.gstreamer.net/job/GStreamer-master-validate/lastCompletedBuild/testReport/validate.file.playback/scrub_forward_seeking/raw_video_mkv/ for example. Also in 1.6.0 but didn't cause crashes there because of disabled assertions.

ERROR:matroska-demux.c:3704:gst_matroska_demux_parse_blockgroup_or_simpleblock: assertion failed: (stream->alignment <= G_MEM_ALIGN)


Not sure why stream->alignment is required to be smaller than G_MEM_ALIGN.
Comment 1 Sebastian Dröge (slomo) 2015-09-27 21:02:11 UTC
Caused by this commit btw

commit 3f8efd8af84365e79c45ec1ec964e4cc1a24bda1
Author: Jan Alexander Steffens (heftig) <jan.steffens@gmail.com>
Date:   Mon Aug 31 12:46:52 2015 +0200

    matroskademux: Align raw video frames to 32 bytes
    
    Outputting unaligned video frames causes videoscale et al to
    crash when attempting SIMD-accelerated conversion.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=736965
Comment 2 Jan Alexander Steffens (heftig) 2015-09-27 21:09:54 UTC
I suppose we could just replace the hardcoded 32 with G_MEM_ALIGN?
Comment 3 Jan Alexander Steffens (heftig) 2015-09-27 21:11:46 UTC
Hm, that may not work; I think G_MEM_ALIGN is 4 on i686 and 8 on x86_64, but SSE2 requires an alignment of 16.
Comment 4 Sebastian Dröge (slomo) 2015-09-28 16:05:09 UTC
commit 1cd4baa16a52d191739deff5b38bc88da67972cb
Author: Sebastian Dröge <sebastian@centricular.com>
Date:   Mon Sep 28 18:03:51 2015 +0200

    matroskademux: Remove leftover assertion from 0.10
    
    We now allocate memory via GstAllocator and as such can handle arbitrary
    alignments, not only <= G_MEM_ALIGN.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=755708